cpp/.metadata/.plugins/org.eclipse.cdt.ui/featextract.build.log

**** Build of configuration Debug for project featextract ****

make all 
Building file: ../featextract.cpp
Invoking: GCC C++ Compiler
g++ -I/usr/include/python2.7 -O0 -g3 -Wall -c -fmessage-length=0 -mavx2 -fopenmp -ftree-vectorize -fPIC -MMD -MP -MF"featextract.d" -MT"featextract.d" -o "featextract.o" "../featextract.cpp"
../featextract.cpp: In function ‘PyObject* extract_features(PyObject*, PyObject*, PyObject*, PyObject*)’:
../featextract.cpp:39:60: error: cannot convert ‘double*’ to ‘int*’ in initialization
     int * gtp = reinterpret_cast<double*>(PyArray_DATA(gtA));
                                                            ^
../featextract.cpp:36:14: warning: unused variable ‘nccp’ [-Wunused-variable]
     double * nccp = reinterpret_cast<double*>(PyArray_DATA(nccA));
              ^
../featextract.cpp:37:14: warning: unused variable ‘censp’ [-Wunused-variable]
     double * censp = reinterpret_cast<double*>(PyArray_DATA(censA));
              ^
../featextract.cpp:38:14: warning: unused variable ‘sadp’ [-Wunused-variable]
     double * sadp = reinterpret_cast<double*>(PyArray_DATA(sadA));
              ^
../featextract.cpp:39:11: warning: unused variable ‘gtp’ [-Wunused-variable]
     int * gtp = reinterpret_cast<double*>(PyArray_DATA(gtA));
           ^
../featextract.cpp:53:1: warning: no return statement in function returning non-void [-Wreturn-type]
 }
 ^
subdir.mk:18: recipe for target 'featextract.o' failed
make: *** [featextract.o] Error 1

**** Build Finished ****
